tests/paczka1/fuzzy1/69598774.err
Error in line 11: GaxJCVUvAo S876 83,9
Error in line 6: u7J S269 48,9
Error in line 13: GaxJCVUvAo S269 97,7
Error in line 21: u7J S269 33,7
Error in line 24: A617 A617 97,6
Error in line 15: JNLAw1 S876 11,8
Error in line 33: JNLAw1 A617 99,4
Error in line 36: JNLAw1 S876 4,5
